crates/rome_formatter/tests/specs/prettier/pipeline-operator/fsharp_style_pipeline_operator.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 83
expression: fsharp_style_pipeline_operator.js

---
# Input
```js
promise
  |> await
  |> x => doubleSay(x, ', ')
  |> capitalize
  |> x => x + '!'
  |> x => new User.Message(x)
  |> x => stream.write(x)
  |> await
  |> console.log;

const result = "hello"
  |> doubleSay
  |> capitalize
  |> exclaim;

const newScore = person.score
  |> double
  |> n => add(7, n)
  |> n => boundScore(0, 100, n);

const user = url
  |> api.get
  |> await
  |> r => r.json()
  |> await
  |> j => j.data.user;

const f = (x) => (x |> (y) => y + 1)
  |> (z) => z * y

const _f = (x) => x
  |> (y) => y + 1
  |> (z) => z * y

const g = (x) => x
  |> (y) => (y + 1 |> (z) => z * y)

const _g = (x) => x
  |> (y => (y + 1 |> (z) => z * y))

const __g = (x) => x
  |> (
    y => {
      return (y + 1 |> (z) => z * y);
    }
  )

const f = x + ((f) => (f |> f));
const f = x |> (f) => f |> f;

```

# Output
```js
promise
  |> await
  |> x => doubleSay(x, ', ')
  |> capitalize
  |> x => x + '!'
  |> x => new User.Message(x)
  |> x
=> stream.write(x)
  |> await
  |> console.log

const result = "hello"
  |> doubleSay
  |> capitalize
  |> exclaim;

const newScore = person.score
  |> double
  |> n => add(7, n)
  |> n => boundScore(0, 100, n);

const user = url
  |> api.get
  |> await
  |> r => r.json()
  |> await
  |> j => j.data.user;

const f = (x) => (x |> (y) => y + 1)
  |> (z) => z * y

const _f = (x) => x
  |> (y) => y + 1
  |> (z) => z * y

const g = (x) => x
  |> (y) => (y + 1 |> (z) => z * y)

const _g = (x) => x
  |> (y => (y + 1 |> (z) => z * y))

const __g = (x) => x
  |> (
    y => {
      return (y + 1 |> (z) => z * y);
    }
  )

const f = x + ((f) => (f |> f));
const f = x |> (f) => f |> f;

```

# Errors
```
error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:2:4
  │
2 │   |> await
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: expected an unary expression but instead found '|'
  ┌─ fsharp_style_pipeline_operator.js:3:3
  │
3 │   |> x => doubleSay(x, ', ')
  │   ^ Expected an unary expression here

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:3:4
  │
3 │   |> x => doubleSay(x, ', ')
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:4:4
  │
4 │   |> capitalize
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:5:4
  │
5 │   |> x => x + '!'
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:6:4
  │
6 │   |> x => new User.Message(x)
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
  ┌─ fsharp_style_pipeline_operator.js:7:4
  │
7 │   |> x => stream.write(x)
  │   -^ But this operator was encountered instead
  │   │ 
  │   This operator requires a right hand side value

error[SyntaxError]: Expected a semicolon or an implicit semicolon after a statement, but found none
  ┌─ fsharp_style_pipeline_operator.js:7:8
  │  
1 │ ┌ promise
2 │ │   |> await
3 │ │   |> x => doubleSay(x, ', ')
4 │ │   |> capitalize
5 │ │   |> x => x + '!'
6 │ │   |> x => new User.Message(x)
7 │ │   |> x => stream.write(x)
  │ │        ^^ An explicit or implicit semicolon is expected here...
  │ └─────────' ...Which is required to end this statement

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:12:4
   │
12 │   |> doubleSay
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:13:4
   │
13 │   |> capitalize
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:14:4
   │
14 │   |> exclaim;
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:17:4
   │
17 │   |> double
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:18:4
   │
18 │   |> n => add(7, n)
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:19:4
   │
19 │   |> n => boundScore(0, 100, n);
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:22:4
   │
22 │   |> api.get
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:23:4
   │
23 │   |> await
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: expected an unary expression but instead found '|'
   ┌─ fsharp_style_pipeline_operator.js:24:3
   │
24 │   |> r => r.json()
   │   ^ Expected an unary expression here

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:24:4
   │
24 │   |> r => r.json()
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:25:4
   │
25 │   |> await
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Illegal use of `await` as an identifier inside of a module
   ┌─ fsharp_style_pipeline_operator.js:25:6
   │
25 │   |> await
   │      ^^^^^

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:26:4
   │
26 │   |> j => j.data.user;
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:28:22
   │
28 │ const f = (x) => (x |> (y) => y + 1)
   │                     -^ But this operator was encountered instead
   │                     │ 
   │                     This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:29:4
   │
29 │   |> (z) => z * y
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:32:4
   │
32 │   |> (y) => y + 1
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:33:4
   │
33 │   |> (z) => z * y
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:36:4
   │
36 │   |> (y) => (y + 1 |> (z) => z * y)
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:36:21
   │
36 │   |> (y) => (y + 1 |> (z) => z * y)
   │                    -^ But this operator was encountered instead
   │                    │ 
   │                    This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:39:4
   │
39 │   |> (y => (y + 1 |> (z) => z * y))
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:39:20
   │
39 │   |> (y => (y + 1 |> (z) => z * y))
   │                   -^ But this operator was encountered instead
   │                   │ 
   │                   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:42:4
   │
42 │   |> (
   │   -^ But this operator was encountered instead
   │   │ 
   │   This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:44:22
   │
44 │       return (y + 1 |> (z) => z * y);
   │                     -^ But this operator was encountered instead
   │                     │ 
   │                     This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:48:27
   │
48 │ const f = x + ((f) => (f |> f));
   │                          -^ But this operator was encountered instead
   │                          │ 
   │                          This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:49:14
   │
49 │ const f = x |> (f) => f |> f;
   │             -^ But this operator was encountered instead
   │             │ 
   │             This operator requires a right hand side value

error[SyntaxError]: Expected an expression for the right hand side of a `|`, but found an operator instead
   ┌─ fsharp_style_pipeline_operator.js:49:26
   │
49 │ const f = x |> (f) => f |> f;
   │                         -^ But this operator was encountered instead
   │                         │ 
   │                         This operator requires a right hand side value


```


